tests/valid/20_empty_stmt.ml
int main() {
    ;
    ;
    int32 x = 10;
    ;
    assert(x == 10, "empty statement failed");
    ;
    return 0;
}
