tests/invalid/07_assert_fail.ml
int main() {
    int32 x = 5;

    assert(x != 5, "assert failed");

    return 0;
}
